# ModelManager

./: setup.cfg
.devcontainer/: devcontainer.json
docs/: conf.py  index.rst
model_manager/: ModelManager.py
src/model_manager/: __init__.py  config.py  exceptions.py  model_manager.py  util.py
