[metadata]
name = model-manager
version = 0.0.1
author = Adin Solomon
author_email = adinbsolomon@gmail.com
description = testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Digital-Pathology/ModelManager
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    dill
    torch

[options.packages.find]
where = src